DevTools: Support resource throttling with off-main-thread-fetch

When off-main-thread-fetch is not enabled, the
X-DevTools-Emulate-Network-Conditions-Client-Id header is set in the main
thread. But when off-main-thread-fetch is enabled, the header must be set in the
worker thread.

This CL change the DevTools code to pass the host ID from the main thread to the
worker thread, and set it in the header.

Bug: 769972
Change-Id: I2ef7e840abea4afd23f6a058fb1eb39615677a30
Reviewed-on: https://chromium-review.googlesource.com/708158
Reviewed-by: Pavel Feldman <pfeldman@chromium.org>
Commit-Queue: Tsuyoshi Horo <horo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507613}
Former-commit-id: c29cb533e1614ed64521fe737b7af36447213296