third_party/WebKit/Source/core/inspector/InspectorWorkerAgent.cpp
@@ -131,6 +131,10 @@ Response InspectorWorkerAgent::sendMessageToTarget(const String& message,
   return Response::Error("Session id must be specified");
 }
 
+void InspectorWorkerAgent::SetHostId(const String& host_id) {
+  host_id_ = host_id;
+}
+
 void InspectorWorkerAgent::SetTracingSessionId(
     const String& tracing_session_id) {
   tracing_session_id_ = tracing_session_id;
@@ -230,7 +234,7 @@ void InspectorWorkerAgent::ConnectToProxy(WorkerInspectorProxy* proxy,
   session_id_to_connection_.Set(session_id, connection);
   connection_to_session_id_.Set(connection, session_id);
 
-  proxy->ConnectToInspector(connection, this);
+  proxy->ConnectToInspector(connection, host_id_, this);
   DCHECK(GetFrontend());
   AttachedSessionIds()->setBoolean(session_id, true);
   GetFrontend()->attachedToTarget(session_id,
