third_party/WebKit/Source/core/inspector/WorkerInspectorController.cpp
@@ -66,7 +66,8 @@ WorkerInspectorController::~WorkerInspectorController() {
   DCHECK(!thread_);
 }
 
-void WorkerInspectorController::ConnectFrontend(int session_id) {
+void WorkerInspectorController::ConnectFrontend(int session_id,
+                                                const String& host_id) {
   if (sessions_.find(session_id) != sessions_.end())
     return;
 
@@ -78,8 +79,11 @@ void WorkerInspectorController::ConnectFrontend(int session_id) {
   if (thread_->GlobalScope()->IsWorkerGlobalScope() &&
       RuntimeEnabledFeatures::OffMainThreadFetchEnabled()) {
     DCHECK(ToWorkerGlobalScope(thread_->GlobalScope())->GetResourceFetcher());
-    session->Append(InspectorNetworkAgent::CreateForWorker(
-        ToWorkerGlobalScope(thread_->GlobalScope())));
+    InspectorNetworkAgent* network_agent =
+        InspectorNetworkAgent::CreateForWorker(
+            ToWorkerGlobalScope(thread_->GlobalScope()));
+    session->Append(network_agent);
+    network_agent->SetHostId(host_id);
   }
   if (sessions_.IsEmpty())
     thread_->GetWorkerBackingThread().BackingThread().AddTaskObserver(this);
