third_party/WebKit/Source/core/workers/WorkerInspectorProxy.h
@@ -43,7 +43,7 @@ class CORE_EXPORT WorkerInspectorProxy final
                                    const String& message,
                                    std::unique_ptr<SourceLocation>);
 
-  void ConnectToInspector(int session_id, PageInspector*);
+  void ConnectToInspector(int session_id, const String&, PageInspector*);
   void DisconnectFromInspector(int session_id, PageInspector*);
   void SendMessageToInspector(int session_id, const String& message);
   void WriteTimelineStartedEvent(const String& tracing_session_id);
